--- a/LudoPage/Ludo.html
+++ b/LudoPage/Ludo.html
@@ -15,6 +15,7 @@
 
     <div class="container">
         <div class="table-container" id="mazeContainer">
+            <table id="mazeTable"></table>
         </div>
     </div>
 
@@ -32,7 +33,7 @@
     <script src="Script.js"></script>
     <script>
     window.onload = adjustTextContainerHeight;
-    window.onload = createMazeTable;
+    window.onload = initMazeTable;
     window.onresize = adjustTextContainerHeight;
     </script>
 </div>
